# claude-bridge-plugin

./: .gitignore  README.md  __init__.py  explore.py  importer.py  protoagent.plugin.yaml  pyproject.toml  requirements-dev.txt  stores.py  tools_import.py  translate.py
skills/claude-bridge/: SKILL.md
tests/: conftest.py  test_explore.py  test_import_tools.py  test_manifest.py  test_register.py  test_stores.py  test_translate.py
