[project]
name = "claude-bridge"
version = "0.2.0"
description = "protoAgent plugin: read-only explore tools over Claude Code's on-disk state (CLI store, scratchpads, Cowork sessions), with artifact translators to follow."
requires-python = ">=3.11"

# Runtime deps come from the protoAgent host (langchain-core, pyyaml) — this plugin
# adds none, so the manifest declares no requires_pip.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501", "E702", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
